force-app/main/default/objects/Forecast_Opportunity__c/Forecast_Opportunity__c.object-meta.xml
<CustomObject>
    <description>Junction object linking Forecast Item with Opportunity Product.</description>
    <label>Forecast Opportunity</label>
    <nameField>
        <displayFormat>FO - {0000}</displayFormat>
        <label>Forecast Opportunity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Forecast Opportunities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>