force-app/main/default/objects/Forecast_Opportunity__c/fields/Fulfillment__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment__c</fullName>
    <label>Fulfillment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Fulfillment</valueSetName>
    </valueSet>
</CustomField>