force-app/main/default/objects/Forecast_Opportunity__c/fields/Opportunity_Product__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Product</label>
    <referenceTo>OpportunityLineItem</referenceTo>
    <relationshipLabel>Forecast Opportunities</relationshipLabel>
    <relationshipName>Forecast_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>